# api-template

./: .dockerignore  .env.template  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
.cursor/commands/: review-architecture.md  review-code-quality.md  review-configuration.md  review-performance.md
.cursor/skills/pydantic-best-practices/: SKILL.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: router.py
app/api/v1/endpoints/: base.py
app/core/: __init__.py  config.py
app/dtos/: __init__.py  health_response.py  models.py  ping_response.py
app/enums/: __init__.py  error_codes.py
app/exceptions/: __init__.py  client_initialization_error.py  core_exception.py
app/utils/: __init__.py  decorators.py
make/: dev.mk  docker.mk  help.mk  variables.mk
tests/: conftest.py  test_app_startup.py  test_base.py  test_decorators.py  test_init.py
