[project]
name = "backend"
version = "0.1.0"
description = "A minimal, production-ready template for building APIs with FastAPI, featuring strict data validation and Docker-based containerization, tailored for express deployment via a secure Cloudflare Tunnel."
license = "Apache-2.0"
readme = "README.md"
keywords = [
    "backend",
    "fastapi",
    "pydantic",
    "docker",
    "uvicorn",
    "python",
    "cloudflare-tunnel",
    "cloudflared",
    "async",
    "rest"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

requires-python = ">=3.14"
dependencies = [
    "aiocache>=0.12.3",
    # Same as fastapi[standard], but fastapi-cli[standard-no-fastapi-cloud-cli] omits
    # fastapi-cloud-cli / sentry-sdk (see Astral/FastAPI CLI extras).
    "fastapi-cli[standard-no-fastapi-cloud-cli]>=0.0.24",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pre-commit-uv>=4.2.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]

[tool.uv]
package = false
exclude-newer = "7 days"
index-strategy = "first-index"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--maxfail=1 --disable-warnings -q --cov=app --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "integration: mark test as an integration test",
    "unit: mark test as a unit test",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-annotations
    "ANN",
    # flake8-print
    "T20",
    # Ruff-specific
    "RUF",
    # FastAPI
    "FAST",
    # flake8-comprehensions
    "C4",
    # pep8-naming
    "N",
    # flake8-pie
    "PIE",
    # flake8-bandit
    "S",
    # flake8-pytest-style
    "PT",
    # flake8-logging
    "LOG",
    # flake8-logging-format
    "G",
    # flake8-async
    "ASYNC",
    # flake8-builtins
    "A",
    # tryceratops
    "TRY",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-datetimez
    "DTZ",
    # flake8-return
    "RET",
    # pylint subsets
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    # pydocstyle
    "D",
]
ignore = [
    "E501",
    "S104",
    "TRY003",
    "ISC001",
    "ISC002",
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "PLR2004",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs}/*" = [
    "ANN",
    "E402",
    "S101",
    "PT",
    "TRY",
    "D",
]

[tool.ruff]
fix = true
target-version = "py314"
line-length = 100
indent-width = 4

[tool.pyright]
typeCheckingMode = "standard"
exclude = [
    "**/tests"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["app"]
split-on-trailing-comma = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Cookie",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Security",
]

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true
mypy-init-return = true

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 12
max-statements = 50

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.environment]
root = ["."]

[tool.ty.src]
include = ["app", "tests"]
respect-ignore-files = true

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
ignore_errors = true

[tool.fastapi]
entrypoint = "app.main:app"
